
h2(#sirius7.5.0). Changes in Sirius  Desktop 7.5.0

* <span class="label label-info">Modified</span> As of version 7.5.0, Sirius Desktop now requires Eclipse 2025-09 or later (and the corresponding versions of EMF, GEF, GMF, EEF, Acceleo).
* <span class="label label-danger">Removed</span> @org.eclipse.sirius.eef.adapters@ plugin and EEF 1.5 support have been removed.

h2(#sirius7.4.11). Changes in Sirius  Desktop 7.4.11

h3. Specifiers-Visible Changes

* <span class="label label-success">Added</span> @GateMapping@ and @GateCreationTool@ have been added in sequence metamodel @org.eclipse.sirius.diagram.sequence.model/model/sequence.ecore@ to add the Gate concept in sequence diagrams. It is used to display a Gate on a CombinedFragment, an InteractionUse or InteractionContainer.
* <span class="label label-success">Added</span> The boolean @BasicMessageMapping#oblique@ has been added for @BasicMessageMapping@ in sequence metamodel @org.eclipse.sirius.diagram.sequence.model/model/sequence.ecore@ to enable the use of oblique messages in Sequence diagrams.

h2(#sirius7.4.10). Changes in Sirius  Desktop 7.4.10

Nothing.

h2(#sirius7.4.9). Changes in Sirius  Desktop 7.4.9

Nothing.

h2(#sirius7.4.8). Changes in Sirius  Desktop 7.4.8

h3. Specifiers-Visible Changes

* <span class="label label-info">Modified</span> In tables, the header label expression configured for Feature columns are now correctly evaluated as actual expressions.

h2(#sirius7.4.7). Changes in Sirius  Desktop 7.4.7

Nothing.

h2(#sirius7.4.6). Changes in Sirius  Desktop 7.4.6

h3. Specifiers-Visible Changes

* The 'interaction container mapping' has been added to the sequence diagram metamodel. It is configured like a container mapping. Its edit part deactivate user interaction. Its goal is to have a background container that graphically wraps around all sequence diagram element.

h3. Developer-Visible Changes
